<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Копiйка Фотоотчет</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="note_title_hint">Enter a title for the note.</string>
    <string name="note_text_hint">Описание задания.</string>
    <string name="note_title_label">Заголовок</string>
    <string name="note_text_label">Описание</string>
    <string name="note_details_label">Details</string>
    <string name="note_complete_label">Отправленно</string>
    <string name="notes_title">Задачи</string>
    <string name="date_picker_title">Дата:</string>
    <string name="note_media">Фото</string>
    <string name="note_pause">Pause</string>
    <string name="note_record">Record</string>
    <string name="error_no_mic">No mic found</string>
    <string name="error_no_camera">У вас нет камеры(</string>
    <string name="report_has_already_been_sent">Этот отчет уже отправлен</string>

    <string name="error_saving">Error while saving</string>
    <string name="new_note">Новый фотоотчет</string>
    <string name="downLoad_note">Обновить</string>


    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Remember Everything</string>
    <string name="delete_note">Delete</string>
    <string name="notes_deleted">Note(s) Deleted</string>
    <string name="capture">Capture</string>
    <string name="icon">icon</string>
    <string name="iconcamera">iconCamera</string>
    <string name="iconcameras">iconCameras</string>
    <string name="iconphoto">iconPhoto</string>
    <string name="space1"> </string>
    <string name="space2"> </string>
    <string name="pref_title">Настройки приложения</string>
    <string name="Preference_ShopTitle">Магазин</string>
    <string name="note_list_titleTitle">Название задания</string>
    <string name="note_list_titleDescr">Номер документа</string>
    <string name="SendNotes">Отправить отчет</string>

</resources>
