<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/note_title"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:editable="false"
        android:hint="@string/note_title_hint"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="0"
        android:gravity="top"
        android:hint="@string/note_text_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollIndicators="right"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarSize="10dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/note_docNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="gone" />


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_media" />


    <ListView
        android:id="@+id/note_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/note_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/note_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/icon"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/note_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/iconcamera"
            android:src="@android:drawable/ic_menu_camera" />

        <CheckBox
            android:id="@+id/note_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/note_complete_label"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
